k8s/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings-be-service
spec:
  selector:
    app: ratings-be
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
