k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings-db-service
spec:
  selector:
    app: ratings-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
