k8s/policy_db_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-only-access-ingress-from5432
spec:
  podSelector:
    matchLabels:
      app: ratings-db
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 5432
