k8s/policy_fe_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fe-only-access-ingress-from80
spec:
  podSelector:
    matchLabels:
      app: ratings-fe
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 80
